# Platinum-Engine

./: .gitignore  LICENSE.txt  README.md  meson.build
include/: glad.h
src/: EBO.cpp  EBO.hpp  Mesh.cpp  Mesh.hpp  PlatinumEngine.cpp  PlatinumEngine.hpp  Shader.cpp  Shader.hpp  SilverRenderer.cpp  SilverRenderer.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  glad.c  glmIncludes.hpp  meson.build
subprojects/SDL2-2.30.3/: meson.build  meson_options.txt
test/: main.cpp
